#26 the delete button was not configured. configured it. Also configure when the listing set changes; #25 due to bug when there's only 1 text input, it will automatically submit the form when press enter. also include the CSRF info on delete and add buttons

--- a/app/views/admins/create.template.haml
+++ b/app/views/admins/create.template.haml
@@ -2,5 +2,6 @@
 	%td #{ @user.samaccountname }
 	%td #{ @user.created_at.localtime }
 	%td
-		%button.remove-user.btn.btn-danger{ :type => 'button', :data => { :id => @user.id }  }
-			%i.fa.fa-minus
+		= form_tag nil, :method => :delete do
+			%button.remove-user.btn.btn-danger{ :type => 'button', :data => { :id => @user.id }  }
+				%i.fa.fa-minus
